sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: ';' expected but double literal found.
			ecart=ecart/(Float)1.3;
                                           ^