sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart:Float =getNombreValeurs();
	var test:Boolean=true;
	do{
		test=false;
		if(ecart>1){
			ecart=ecart/(Float)1.3;
		}
		var i:Int=0;
		while(i+ecart<getNombreValeurs()){
			if(plusPetit(i+ecart,i)){
				echange(i+ecart,i);
				test=true;
			}
			i++;
		}
	}while(ecart>1 || test)
}
